--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "./src/node": "./src/browser"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vite": "vite build",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
